Overflow fix.

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {
     font-family: 'Josefin Sans';
     display: flex;
     margin: 0;
-    overflow: hidden;
 }
 
 #content-container {
@@ -69,7 +68,7 @@ body {
 #message {
     color: var(--desaturated-red);
     font-weight: 400;
-    line-height: 1.5rem;
+    line-height: 2rem;
     width: 100%;
 }
 
